# mxt_terminal

./: .gitignore  api-docs.md  build-spice.js  database-design.md  design.md  index.html  package-lock.json  package.json  requirements.md  spice-launcher.c  tsconfig.json  vite.config.ts
spice-gtk-v0.43/: .editorconfig  .gitlab-ci.yml  .gitmodules  .gitpublish  .mailmap  AUTHORS  CHANGELOG.md  README.md  meson.build  meson_options.txt
spice-gtk-v0.43/build-aux/: git-version-gen  meson-dist  setcap-or-suid
spice-gtk-v0.43/data/: meson.build  org.spice-space.lowlevelusbaccess.policy
spice-gtk-v0.43/doc/: meson.build
spice-gtk-v0.43/doc/reference/: SpiceClientGLib.toml.in  SpiceClientGtk.toml.in  application-support.md  gtk-overview.md  meson.build  overview.md  session-channels.md  urlmap.js
spice-gtk-v0.43/man/: meson.build  spice-client.pod
spice-gtk-v0.43/po/: LINGUAS  POTFILES  cs.po  de.po  fr.po  it.po  ka.po  meson.build  ru.po
spice-gtk-v0.43/src/: bio-gio.c  bio-gio.h  cd-scsi-dev-params.h  cd-scsi.c  cd-scsi.h  cd-usb-bulk-msd.c  cd-usb-bulk-msd.h  channel-base.c  channel-cursor.c  channel-cursor.h  channel-display-gst.c  channel-display-mjpeg.c  channel-display-priv.h  channel-display.c  channel-display.h  channel-inputs.c  channel-inputs.h  channel-main.c  channel-main.h  channel-playback-priv.h  channel-playback.c  channel-playback.h  channel-port.c  channel-port.h  channel-record.c  channel-record.h  channel-smartcard.c  channel-smartcard.h  channel-usbredir-priv.h  channel-usbredir.c  channel-usbredir.h  channel-webdav.c  channel-webdav.h  client_sw_canvas.c  client_sw_canvas.h  continuation.c  continuation.h  coroutine.h  coroutine_gthread.c  coroutine_ucontext.c  (+89 more)
spice-gtk-v0.43/tests/: cd-emu.c  coroutine.c  file-transfer.c  meson.build  mock-acl-helper.c  pipe.c  session.c  uri.c  usb-acl-helper.c  util.c
spice-gtk-v0.43/tools/: meson.build  spice-cmdline.c  spice-cmdline.h  spicy-connect.c  spicy-connect.h  spicy-screenshot.c  spicy-stats.c  spicy.c
spice-gtk-v0.43/vapi/: SpiceClientGLib-2.0.metadata  meson.build  spice-client-glib-2.0.deps  spice-client-gtk-3.0.deps
src/: App.tsx  main.tsx  theme.ts
src-tauri/: Cargo.toml  spice-bridge.c  tauri.conf.json  test-call.c  test-dll.c  test-load.c  test-spice.c
src-tauri/src/: db.rs  main.rs  spice_ffi.rs
src/components/auth/: LoginPage.tsx  MFAVerification.tsx
src/components/common/: Modal.tsx  StatusIndicator.tsx  Toast.tsx  Watermark.tsx
src/components/connection/: ConnectionView.tsx  MoonlightCanvas.tsx  RdpCanvas.tsx  SpiceCanvas.tsx  SpiceWebViewer.tsx
src/components/desktop/: DesktopCard.tsx  DesktopDetail.tsx  DesktopList.tsx
src/components/floating-ball/: FloatingBall.tsx
src/components/security/: ClipboardMonitor.tsx  SecurityDashboard.tsx
src/components/settings/: About.tsx  AccountSettings.tsx  ConnectionSettings.tsx  DeviceTimeSync.tsx  DiagnosticTools.tsx  DisplaySettings.tsx  FirmwareUpdate.tsx  NetworkSettings.tsx  PeripheralSettings.tsx  PowerSettings.tsx  Settings.tsx
src/services/: db.ts
src/services/api/: auth.ts  client.ts  desktop.ts  file.ts
src/services/connection/: ConnectionManager.ts
src/services/file-transfer/: index.ts
src/store/: authStore.ts  connectionStore.ts  desktopStore.ts  settingsStore.ts
src/types/: auth.ts  connection.ts  desktop.ts  file-transfer.ts  index.ts  peripheral.ts  protocol.ts  security.ts  settings.ts
src/utils/: logger.ts  platform.ts
(+2 files in other folders)
