[package]
name = "cloud-terminal"
version = "1.0.0"
description = "Cloud Terminal Client - 云终端客户端"
authors = ["Cloud Terminal Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "protocol-asset", "dialog-save", "shell-open", "dialog-open", "fs-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
libloading = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
